--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -42,15 +42,16 @@
             to help us grow?
       .decorations
 
-      = link_to "https://github.com/exercism", class: 'c-social-icon' do
-        = graphical_icon 'external-site-github'
-        GitHub
-      = link_to "https://twitter.com/exercism_io", class: 'c-social-icon twitter' do
-        = graphical_icon 'external-site-twitter'
-        Twitter
-      = link_to "https://www.youtube.com/c/Exercism-videos", class: 'c-social-icon' do
-        = graphical_icon 'external-site-youtube'
-        YouTube
+      .social-icons-container
+        = link_to "https://github.com/exercism", class: 'c-social-icon' do
+          = graphical_icon 'external-site-github'
+          GitHub
+        = link_to "https://twitter.com/exercism_io", class: 'c-social-icon twitter' do
+          = graphical_icon 'external-site-twitter'
+          Twitter
+        = link_to "https://www.youtube.com/c/Exercism-videos", class: 'c-social-icon' do
+          = graphical_icon 'external-site-youtube'
+          YouTube
 
     %article
       .lhs
