--- a/app/css/pages/dashboard.css
+++ b/app/css/pages/dashboard.css
@@ -66,7 +66,7 @@
         }
     }
     & header.dashboard-header {
-        @apply flex items-center pt-32 mb-48;
+        @apply flex lg:flex-row flex-col gap-48 items-center pt-32 mb-48;
 
         & .intro {
             @apply flex;
@@ -114,6 +114,11 @@
             background-size: 155px;
             @apply flex-shrink-0 mr-20;
             @apply self-start;
+            @apply xl:block hidden;
+        }
+
+        .social-icons-container {
+            @apply flex;
         }
     }
 
