--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -50,3 +50,14 @@
         = link_to "", class: "btn-default btn-l" do
           See how you can help
 
+  .bg-repeat-round.flex{ class: "h-[576px] bg-[url(photos/mug.png)]" }
+    .m-auto.rounded-16.bg-backgroundColorH.pt-32.px-24.pb-48.grid.place-items-center.grow{ class: 'max-w-[640px]' }
+      .bg-gotToLoveAPurple.flex.text-white.py-6.px-16.items-center.rounded-100.shadow-dark_xsZ1.font-semibold.mb-32.leading-150
+        = graphical_icon "moon", css_class: "filter-white h-[16px] w-[16px] mr-16"
+        Dark Mode styles available!
+      = graphical_icon "exercism-face", css_class: 'filter-white h-[64px] w-[64px] mb-12'
+      %h2.text-h2.text-white.text-unnamed15.mb-8 Explore out swag
+      .leading-150.text-20.text-borderLight.mb-24
+        Stop looking shit. Buy our shit.
+      = link_to "", class: 'btn-primary btn-l' do
+        Get swagged up
