--- a/app/views/tracks/approaches/tooltip_locked.html.haml
+++ b/app/views/tracks/approaches/tooltip_locked.html.haml
@@ -3,14 +3,10 @@
     Struggling with this exercise?
 
   - if @solution&.downloaded? || @solution&.submitted?
-    %p.mb-12{ class: '!mt-0 ' }
+    %p.mb-12.text-borderLight{ class: '!mt-0 ' }
       Unlock the Dig Deeper tab to see how the community approached and solved #{@exercise.title}.
 
-    .flex.mb-10
-      .grow{ class: "w-[100%]" }
-        = button_to unlock_help_api_solution_url(@solution.uuid), method: :patch, class: 'btn-primary btn-s grow w-[100%] text-14 !py-4 !px-16' do
-          = graphical_icon 'unlock', css_class: "w-[14px] h-[14px]"
-          Unlock this tab
+    = ReactComponents::Track::UnlockButton.new(unlock_help_api_solution_url(@solution.uuid))
   - else
     %p.mb-12
       You can only view the Dig Deeper tab for this exercise if you've attempted this exercise at least once.
