--- a/app/views/tracks/community_solutions/tooltip_locked.html.haml
+++ b/app/views/tracks/community_solutions/tooltip_locked.html.haml
@@ -4,7 +4,7 @@
 
 
   - if @solution&.downloaded? || @solution&.submitted?
-    %p.mb-12{ class: '!mt-0 ' }
+    %p.mb-12.text-borderLight{ class: '!mt-0 ' }
       Unlock Community Solutions to see how the community approached and solved #{@exercise.title}.
 
     = ReactComponents::Track::UnlockButton.new(unlock_help_api_solution_url(@solution.uuid))
