Add functionality for button, style error message and everything else

--- a/app/views/tracks/approaches/tooltip_locked.html.haml
+++ b/app/views/tracks/approaches/tooltip_locked.html.haml
@@ -1,4 +1,4 @@
-.c-generic-tooltip.text-16.text-borderLight.leading-150{ class: "!py-16 !px-24 !max-w-[420px]" }
+.c-generic-tooltip.text-16.leading-150{ class: "!py-16 !px-24 !max-w-[420px]" }
   %p.text-lightPurple.font-semibold.mb-4
     Struggling with this exercise?
 
@@ -11,5 +11,5 @@
     %p.mb-12
       You can only view the Dig Deeper tab for this exercise if you've attempted this exercise at least once.
 
-  .font-semibold.text-lightGold.text-14
+  .font-semibold.text-lightGold.text-14.leading-150
     We highly recommend you try your best without exploring the Dig Deeper tab first.
