--- a/app/css/components/alert.css
+++ b/app/css/components/alert.css
@@ -5,7 +5,7 @@ this could be turned into one alert, with common props, then have variants below
 - caution
 - danger
 
-this is alert--caution
+this is c-alert--caution
 */
 .c-alert {
     @apply border-2 border-orange rounded-8;
@@ -20,4 +20,9 @@ this is alert--caution
 .c-alert--danger {
     @apply c-alert;
     @apply bg-veryLightRed text-danger border-danger;
+}
+
+.c-alert--danger_dark {
+    @apply c-alert--danger;
+    @apply bg-bgDanger_dark text-danger_dark;
 }
