--- a/app/views/tracks/community_solutions/tooltip_locked.html.haml
+++ b/app/views/tracks/community_solutions/tooltip_locked.html.haml
@@ -1,4 +1,4 @@
-.c-generic-tooltip.text-16.text-borderLight.leading-150{ class: "!py-16 !px-24 !max-w-[420px]" }
+.c-generic-tooltip.text-16.leading-150{ class: "!py-16 !px-24 !max-w-[420px]" }
   %p.text-lightPurple.font-semibold.mb-4
     Struggling with this exercise?
 
@@ -12,5 +12,5 @@
     %p.mb-12
       You can only view the Community Solutions tab if you've attempted this exercise at least once.
 
-  .font-semibold.text-lightGold.text-14
+  .font-semibold.text-lightGold.text-14.leading-150
     We highly recommend you try your best without exploring the Community Solutions tab first.
