--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -221,6 +221,7 @@
 @import "./pages/journey/reputation";
 @import "./pages/journey/badges";
 @import "./pages/impact";
+@import "./pages/community-page";
 
 @import "./highlighters/highlightjs-light";
 @import "./highlighters/highlightjs-dark";
