--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -33,9 +33,9 @@
 
     .flex.gap-96.mb-96
       .grid.py-32
-        = graphical_icon "podcast-gradient", css_class: "h-[48px] w-[48px] mb-8"
+        = graphical_icon "podcast-gradient", css_class: "h-[48px] w-[48px] mb-16"
         %h2.text-h2.mb-8 Hear our Community Stories
-        %p.mb-24 Listen to the stories of those who have build, contributed to, and learnt from Exercism.
+        %p.mb-24.text-p-large.text-textColor5 Listen to the stories of those who have build, contributed to, and learnt from Exercism.
 
         .flex.gap-16
           - 3.times do
@@ -47,9 +47,9 @@
                 Bobbi Towers
 
       .flex.flex-col.bg-white.shadow-baseZ1.p-32.rounded-8
-        .flex.flex-wrap.pb-16.mb-24{ class: 'w-[320px]' }
+        .flex.flex-wrap.pb-16.mb-24{ class: 'w-[360px]' }
           - 40.times do
-            = image_tag "team/erik.jpg", class: 'h-[48px] w-[48px] mb-[-16px] mr-[-16px] rounded-circle'
+            = image_tag "team/erik.jpg", class: 'h-[48px] w-[48px] mb-[-16px] mr-[-12px] rounded-circle'
         %h2.text-h2.mb-8 Help us change lives
         %p.mb-24.text-p-large.text-textColor5
           We&apos;re community powered and community funded. We rely on donations from people like you to enable us to exist and thrive.
@@ -60,14 +60,43 @@
             See how you can help
             = graphical_icon "arrow-right", css_class: 'filter-textColor1'
 
-  .bg-repeat-round.flex{ class: "h-[576px] bg-[url(photos/mug.png)]" }
+  .bg-repeat-round.flex.mb-64{ class: "h-[576px] bg-[url(photos/mug.png)]" }
     .m-auto.rounded-16.bg-backgroundColorH.pt-32.px-24.pb-48.grid.place-items-center.grow{ class: 'max-w-[640px]' }
       .bg-gotToLoveAPurple.flex.text-white.py-6.px-16.items-center.rounded-100.shadow-dark_xsZ1.font-semibold.mb-32.leading-150
         = graphical_icon "moon", css_class: "filter-white h-[16px] w-[16px] mr-16"
         Dark Mode styles available!
       = graphical_icon "exercism-face", css_class: 'filter-white h-[64px] w-[64px] mb-12'
-      %h2.text-h2.text-white.text-unnamed15.mb-8 Explore out swag
+      %h2.text-h2.text-white.text-unnamed15.mb-8 Explore our swag
       .leading-150.text-20.text-borderLight.mb-24
         Stop looking shit. Buy our shit.
       = link_to "", class: 'btn-primary btn-l' do
         Get swagged up
+
+
+  .lg-container
+    .flex.items-center.mb-32.justify-between
+      %h2.text-h2.flex.items-center
+        = graphical_icon "contributors-gradient", css_class: 'mr-24'
+        Contributors
+      .text-p-large.w-1-2.border-l-1.border-borderLight.pl-48
+        The people who help build Exercism.
+
+    .flex.gap-16.mb-24
+      .border-1.border-borderLight.flex.items-center.py-12.px-24.rounded-8.text-24.grow.shadow-xsZ1v2
+        🚀
+        = graphical_icon "avatar-placeholder", css_class: "w-[48px] h-[48px] ml-24 mr-20"
+        .grid.gap-2
+          .text-textColor6.text-16.font-medium Featured contributor
+          .text-textColor1.text-18.font-semibold angelikatyborska
+      .border-1.border-borderLight.flex.items-center.py-12.px-24.rounded-8.text-24.grow.shadow-xsZ1v2
+        🚀
+        = graphical_icon "avatar-placeholder", css_class: "w-[48px] h-[48px] ml-24 mr-20"
+        .grid.gap-2
+          .text-textColor6.text-16.font-medium Featured contributor
+          .text-textColor1.text-18.font-semibold angelikatyborska
+
+
+    .contributors-list
+      .container
+        = render ReactComponents::Contributing::ContributorsList.new(params)
+
