--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -89,11 +89,11 @@
           .text-textColor6.text-16.font-medium Featured contributor
           .text-textColor1.text-18.font-semibold angelikatyborska
       .border-1.border-borderLight.flex.items-center.py-12.px-24.rounded-8.text-24.grow.shadow-xsZ1v2
-        🚀
+        .new New
         = graphical_icon "avatar-placeholder", css_class: "w-[48px] h-[48px] ml-24 mr-20"
         .grid.gap-2
-          .text-textColor6.text-16.font-medium Featured contributor
-          .text-textColor1.text-18.font-semibold angelikatyborska
+          .text-textColor6.text-16.font-medium New contributor
+          .text-textColor1.text-18.font-semibold jonathanmiddleton
 
 
     .contributors-list
