Pass approaches to react component

--- a/app/views/tracks/approaches/index.html.haml
+++ b/app/views/tracks/approaches/index.html.haml
@@ -3,5 +3,5 @@
 
 #page-approaches-index
   = render ViewComponents::Track::ExerciseHeader.new(@exercise, @solution, @user_track, :approaches)
-  = render ReactComponents::Track::Approaches.new(@videos, @introduction, @links, @track, @exercise)
+  = render ReactComponents::Track::Approaches.new(@videos, @introduction, @approaches, @links, @track, @exercise)
 
