Add lightblue filter

--- a/app/css/pages/community-page.css
+++ b/app/css/pages/community-page.css
@@ -39,6 +39,7 @@
             height: 16px;
             width: 16px;
             @apply ml-12;
+            @apply filter-lightBlue;
         }
     }
 
