--- a/app/views/tracks/approaches/tooltip_locked.html.haml
+++ b/app/views/tracks/approaches/tooltip_locked.html.haml
@@ -6,7 +6,7 @@
     %p.mb-12.text-borderLight{ class: '!mt-0 ' }
       Unlock the Dig Deeper tab to see how the community approached and solved #{@exercise.title}.
 
-    = ReactComponents::Track::UnlockButton.new(unlock_help_api_solution_url(@solution.uuid))
+    = ReactComponents::Track::UnlockHelpButton.new(unlock_help_api_solution_url(@solution.uuid))
   - else
     %p.mb-12
       You can only view the Dig Deeper tab for this exercise if you've attempted this exercise at least once.
