Add stuff to VideoList

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -42,7 +42,7 @@
             .grid.shadow-sm.p-16.bg-white
               .self-center.bg-borderLight.rounded-8.mb-12{ class: "w-[100%] pb-[56.25%]" }
               %h5.text-h5.mb-8 How I Saved My Life with 3D Printing
-              .flex.items-center.text-left
+              .flex.items-center.text-left.text-textColor6.font-semibold
                 = graphical_icon "avatar-placeholder", css_class: "h-[24px] w-[24px] mr-8"
                 Bobbi Towers
 
