--- a/app/css/pages/dashboard.css
+++ b/app/css/pages/dashboard.css
@@ -66,7 +66,7 @@
         }
     }
     & header.dashboard-header {
-        @apply flex lg:flex-row flex-col gap-48 items-center pt-32 mb-48;
+        @apply flex lg:flex-row flex-col gap-y-48 items-center pt-32 mb-48;
 
         & .intro {
             @apply flex;
