Use h5 to featured contributors' handle

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -95,14 +95,14 @@
         🚀
         = graphical_icon "avatar-placeholder", css_class: "w-[48px] h-[48px] ml-24 mr-20"
         .grid.gap-2
-          .text-textColor6.text-16.font-medium Featured contributor
-          .text-textColor1.text-18.font-semibold angelikatyborska
+          .text-textColor6.text-16.font-medium.leading-140 Featured contributor
+          %h5.text-h5 angelikatyborska
       .border-1.border-borderLight.flex.items-center.py-12.px-24.rounded-8.text-24.grow.shadow-xsZ1v2
         .new New
         = graphical_icon "avatar-placeholder", css_class: "w-[48px] h-[48px] ml-24 mr-20"
         .grid.gap-2
-          .text-textColor6.text-16.font-medium New contributor
-          .text-textColor1.text-18.font-semibold jonathanmiddleton
+          .text-textColor6.text-16.font-medium.leading-140 New contributor
+          %h5.text-h5 jonathandmiddleton
 
 
     .contributors-list
