Add role: :presentation to image_tag

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -29,7 +29,7 @@
               = graphical_icon "message-bubble-square"
               56
       .grid
-        = image_tag "forum.png"
+        = image_tag "forum.png", alt: "", role: :presentation
 
     .flex.gap-96.mb-96
       .grid.py-32
