--- a/app/css/pages/community-page.css
+++ b/app/css/pages/community-page.css
@@ -1,4 +1,4 @@
-#page-community {
+#page-community-index {
     header {
         @apply absolute;
         width: 100%;
@@ -161,5 +161,12 @@
         @apply bg-lightGold rounded-3;
         @apply text-12 leading-140 font-mono font-bold uppercase;
         @apply py-4 px-8;
+    }
+}
+
+#page-community-show {
+    .youtube-link {
+        @apply bg-youtubeRed py-16 px-32 rounded-100 flex items-center;
+        @apply text-18 font-semibold leading-150 text-white;
     }
 }
