Add elements to individual podcast page

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -39,7 +39,7 @@
 
         .flex.gap-16.mb-32
           - 3.times do
-            .grid.shadow-sm.p-16.bg-white
+            .grid.shadow-sm.p-16.bg-white.rounded-8
               .self-center.bg-borderLight.rounded-8.mb-12{ class: "w-[100%] pb-[56.25%]" }
               %h5.text-h5.mb-8 How I Saved My Life with 3D Printing
               .flex.items-center.text-left.text-textColor6.font-semibold
