--- a/app/css/pages/community-page.css
+++ b/app/css/pages/community-page.css
@@ -165,8 +165,49 @@
 }
 
 #page-community-show {
+    header {
+        @apply absolute;
+        width: 100%;
+        left: 0px;
+        top: 64px;
+        height: 501px;
+        background: linear-gradient(180deg, #130b43 0%, #3c097d 100%);
+        background-size: 100%;
+    }
+
     .youtube-link {
         @apply bg-youtubeRed py-16 px-32 rounded-100 flex items-center;
         @apply text-18 font-semibold leading-150 text-white;
+    }
+    p {
+        background: none;
+    }
+
+    details {
+        @apply text-textColor2;
+        @apply mb-48 bg-purpleForever py-12 px-24 leading-150 rounded-12 text-16;
+        summary {
+            @apply flex items-center justify-between;
+            @apply font-semibold select-none;
+
+            &:after {
+                content: url("icons/chevron-right.svg");
+                @apply block filter-white;
+                width: 16px;
+                height: 16px;
+                transition: all 150ms;
+            }
+        }
+        p {
+            @apply text-p-base mt-20 mb-12;
+        }
+    }
+
+    details[open] {
+        summary {
+            &:after {
+                @apply rotate-90;
+            }
+        }
     }
 }
