Add podcast grid

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -79,7 +79,7 @@
   .lg-container
 
 
-    = render ReactComponents::Community::VideoList.new
+    = render ReactComponents::Community::VideoGrid.new
 
 
 
