--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -24,4 +24,4 @@
     %details.theme-dark
       %summary Read the full transcript
       %p= @transcript
-    = render ReactComponents::Community::VideoList.new
+    = render ReactComponents::Community::PodcastGrid.new
