--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -50,12 +50,13 @@
 
     .grid.gap-24.grid-cols-1.sm:grid-cols-2.md:grid-cols-3.mb-32
       - @other_approaches.each do |other_approach|
-        .bg-white.shadow-base.rounded-8.px-20.py-16.mb-16
-          %pre.border-1.border-lightGray.rounded-8.p-16.mb-16
-            %code.block.overflow-hidden{ class: "lang-#{@track.highlightjs_language} h-[134px]", style: "text-overflow:ellipsis" }
-              = other_approach.snippet
-          %h5.text-h5.mb-2
-            = other_approach.title
-          %p.text-p-base.text-textColor6.mb-12
-            = other_approach.blurb
-          -# = render ReactComponents::Track::Credits.new(Array.new(5, @approach.author.avatar_url), 5, "contributor", 3, "reviewer")
+        = link_to Exercism::Routes.track_exercise_approach_path(@track, @exercise, other_approach) do
+          .bg-white.shadow-base.rounded-8.px-20.py-16.mb-16
+            %pre.border-1.border-lightGray.rounded-8.p-16.mb-16
+              %code.block.overflow-hidden{ class: "lang-#{@track.highlightjs_language} h-[134px]", style: "text-overflow:ellipsis" }
+                = other_approach.snippet
+            %h5.text-h5.mb-2
+              = other_approach.title
+            %p.text-p-base.text-textColor6.mb-12
+              = other_approach.blurb
+            -# = render ReactComponents::Track::Credits.new(Array.new(5, @approach.author.avatar_url), 5, "contributor", 3, "reviewer")
