--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -45,14 +45,14 @@
 
     .grid.gap-24.grid-cols-1.sm:grid-cols-2.md:grid-cols-3.mb-32
       - @other_approaches.each do |other_approach|
-        = link_to Exercism::Routes.track_exercise_approach_path(@track, @exercise, other_approach) do
+        = link_to Exercism::Routes.track_exercise_approach_path(@track, @exercise, other_approach[:slug]) do
           .bg-white.shadow-base.rounded-8.px-20.py-16.mb-16
             %pre.border-1.border-lightGray.rounded-8.p-16.mb-16
               %code.block.overflow-hidden{ class: "lang-#{@track.highlightjs_language} h-[134px]", style: "text-overflow:ellipsis" }
-                = other_approach.snippet
+                = other_approach[:snippet]
             %h5.text-h5.mb-2
-              = other_approach.title
+              = other_approach[:title]
             %p.text-p-base.text-textColor6.mb-12
-              = other_approach.blurb
+              = other_approach[:blurb]
             -# TODO change this after reworking Credits
-            = render ReactComponents::Track::Credits.new(@avatar_urls, other_approach.authors.count, "author", other_approach.contributors.count, "contributor")
+            = render ReactComponents::Track::Credits.new(@avatar_urls, other_approach[:num_authors], "author", other_approach[:num_contributors], "contributor")
