Link to forum on community page

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -11,7 +11,7 @@
           Ask questions, explore ideas, and get to know millions of other developers upskilling on Exercism.
 
         .flex
-          = link_to "", class: "btn-primary btn-l mb-20" do
+          = link_to 'https://forum.exercism.org/', class: "btn-primary btn-l mb-20" do
             Explore our forum
 
         .text-warning.font-semibold.leading-150.flex.items-center.mb-16.py-6.px-12
