Add link to donate page on community page

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -59,7 +59,7 @@
           %strong.text-textColor1 Only 1% of people choose to support us. Please be one of them.
 
         .flex
-          = link_to "", class: "btn-default btn-m border-textColor1" do
+          = link_to donate_path, class: "btn-default btn-m border-textColor1" do
             See how you can help
             = graphical_icon "arrow-right", css_class: 'filter-textColor1'
 
