--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -17,7 +17,7 @@
             Listen via Youtube
             = graphical_icon "new-tab", css_class: "h-[16px] w-[16px] filter-white ml-16"
 
-          .text-label-code-caps.text-lightGold LENGTH 01HR 32MINS
+          .text-label-code-caps.text-lightGold.whitespace-nowrap LENGTH 01HR 32MINS
 
       = image_tag @interviewee_icon_url, class: "w-[280px] h-[280px] rounded-circle theme-dark shadow-lg"
 
