--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -72,7 +72,7 @@
       %h2.text-h2.text-white.text-unnamed15.mb-8 Explore our swag
       .leading-150.text-20.text-borderLight.mb-24
         Stop looking shit. Buy our shit.
-      = link_to "", class: 'btn-primary btn-l' do
+      = link_to "https://swag.exercism.org", class: 'btn-primary btn-l' do
         Get swagged up
 
   .lg-container
