Comment out featured contributor

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -87,7 +87,7 @@
       .text-p-large.w-1-2.border-l-1.border-borderLight.pl-48
         The people who help build Exercism.
 
-    .flex.gap-16.mb-24
+    -# .flex.gap-16.mb-24
       .border-1.border-borderLight.flex.items-center.py-12.px-24.rounded-8.text-24.grow.shadow-xsZ1v2
         🚀
         = graphical_icon "avatar-placeholder", css_class: "w-[48px] h-[48px] ml-24 mr-20"
