--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -78,7 +78,7 @@
         Get swagged up
 
   .lg-container
-    = render ReactComponents::Community::VideoGrid.new
+    = render ReactComponents::Community::VideoGrid.new(params)
 
     .flex.items-center.mb-32.justify-between
       %h2.text-h2.flex.items-center
