--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -39,13 +39,19 @@
         %p.mb-24.text-p-large.text-textColor5 Listen to the stories of those who have build, contributed to, and learnt from Exercism.
 
         .flex.gap-16.mb-32
-          - 3.times do
+          - @community_stories.each do |community_story|
             .grid.shadow-sm.p-16.bg-white.rounded-8
               .self-center.bg-borderLight.rounded-8.mb-12{ class: "w-[100%] pb-[56.25%]" }
-              %h5.text-h5.mb-8 How I Saved My Life with 3D Printing
+              %h5.text-h5.mb-8
+                = community_story.title
               .flex.items-center.text-left.text-textColor6.font-semibold
                 = graphical_icon "avatar-placeholder", css_class: "h-[24px] w-[24px] mr-8"
-                Bobbi Towers
+                - interviewee = community_story.interviewee
+                - if interviewee.profile
+                  = link_to avatar(interviewee), profile_path(interviewee)
+                - else
+                  = avatar(interviewee)
+                  = interviewee.name
 
         -# Temporarily disable this link until we have a separate page
           = link_to "", class: 'explore-link' do
